HW5SERVER/tests/output/t15.out
lli: lli: tmp.ll:58:23: error: use of undefined value '%va'
store i32 %t11 , i32* %va
                      ^

